<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="submit">Submit</string>
    <string name="textA">A</string>
    <string name="textB">B</string>
    <string name="textAB">A^B</string>
    <string name="trueStat">T</string>
    <string name="falseStat">F</string>
    <string name="message">You have %d correct answers</string>
</resources>