<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/conTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textSize="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"
        />

    <TextView
        android:id="@+id/textA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/textA"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conTitle"
        />

    <TextView
        android:id="@+id/textB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/textB"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textAB"
        app:layout_constraintStart_toEndOf="@+id/textA"
        app:layout_constraintTop_toBottomOf="@+id/conTitle"
        />

    <TextView
        android:id="@+id/textAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/textAB"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textB"
        app:layout_constraintTop_toBottomOf="@+id/conTitle"
        />

    <TextView
        android:id="@+id/row1P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trueStat"
        android:layout_marginTop="54dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/row1P2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textA"
        />

    <TextView
        android:id="@+id/row1P2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trueStat"
        android:layout_marginTop="54dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/answer1"
        app:layout_constraintStart_toEndOf="@id/row1P1"
        app:layout_constraintTop_toBottomOf="@+id/textB"
        />

    <TextView
        android:id="@+id/row2P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trueStat"
        android:layout_marginTop="54dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/row2P2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row1P1"
        />

    <TextView
        android:id="@+id/row2P2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/falseStat"
        android:layout_marginTop="54dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/answer2"
        app:layout_constraintStart_toEndOf="@id/row2P1"
        app:layout_constraintTop_toBottomOf="@+id/row1P2"
        />

    <TextView
        android:id="@+id/row3P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/falseStat"
        android:layout_marginTop="54dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@id/row3P2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row2P1"
        />

    <TextView
        android:id="@+id/row3P2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trueStat"
        android:layout_marginTop="54dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/answer3"
        app:layout_constraintStart_toEndOf="@id/row3P1"
        app:layout_constraintTop_toBottomOf="@+id/row2P2"
        />

    <TextView
        android:id="@+id/row4P1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/falseStat"
        android:layout_marginTop="54dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/row4P2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row3P1"
        />

    <TextView
        android:id="@+id/row4P2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/falseStat"
        android:layout_marginTop="54dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toStartOf="@+id/answer4"
        app:layout_constraintStart_toEndOf="@id/row4P1"
        app:layout_constraintTop_toBottomOf="@+id/row3P2"
        />

    <EditText
        android:id="@+id/answer1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:maxLength="1"
        android:digits="TF"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/row1P2"
        app:layout_constraintTop_toBottomOf="@id/textAB" />

    <EditText
        android:id="@+id/answer2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:maxLength="1"
        android:digits="TF"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/row2P2"
        app:layout_constraintTop_toBottomOf="@id/answer1" />

    <EditText
        android:id="@+id/answer3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:maxLength="1"
        android:digits="TF"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/row3P2"
        app:layout_constraintTop_toBottomOf="@id/answer2" />

    <EditText
        android:id="@+id/answer4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:maxLength="1"
        android:digits="TF"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/row4P2"
        app:layout_constraintTop_toBottomOf="@id/answer3" />


</androidx.constraintlayout.widget.ConstraintLayout>